--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,21 @@ button.btn {
 	height: 100vh !important;
 }
 
+.table-bordered{
+	margin: 10px;
+	padding: 18px;
+    height: 74px;
+}
+.table-bordered:hover{
+	background-color: #ee8162;
+	color: #fff;
+}
+.amen p:hover{
+	color: #fff;
+}
+.wow .amen{
+	padding-left: 30px;
+}
 /* Custom, iPhone Retina */
 /* Small Devices, Tablets */
 /* Medium Devices, Desktops */
@@ -387,8 +402,8 @@ ul {
 }
 
 section {
-	padding-top: 100px;
-	padding-bottom: 100px;
+	padding-top: 50px;
+	padding-bottom: 50px;
 	overflow: hidden;
 }
 
@@ -821,8 +836,8 @@ section {
 @media only screen and (max-width: 767px) {
 
 section {
-	padding-top: 60px;
-	padding-bottom: 60px;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 
 .text-center-xs {
@@ -1905,6 +1920,7 @@ label {
 	color: #000;
 }
 }
+
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
