--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1069,7 +1069,9 @@ section {
     #BACKGROUNDS
 \*------------------------------------*/
 .bg-theme {
-	background-color: #0f4c89  !important;
+	/* background-color: #0f4c89  !important; */
+	background: url(/assets/images/background/xd.jpg);
+	background-size: 100% 100%;
 }
 
 .bg-gray {
