--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ h6 {
 
 p {
 	color: #aaaaaa;
-	font-size: 13px;
+	font-size: 15px;
 	font-weight: 400;
 	line-height: 22px;
 }
@@ -1340,9 +1340,12 @@ section {
 
 .bg-theme .btn--primary,
 .bg-overlay-theme .btn--primary {
-	background-color: #363636;
+	background-color: #e41b49;
 	color: #ffffff;
 	border: none;
+}
+.btn--primary:hover{
+	background-color: #222222;
 }
 
 .portfolio-filter li a.active-filter,
